welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:1: error: Missing closing brace `}' assumed here
override def run() {for (compteur <- 1 to 9){
^PictureMono3:1: error: expected start of definition
override def run() {for (compteur <- 1 to 9){
         ^PictureMono3:5: error: expected class or object definition
def Motif1(){
^PictureMono3:15: error: expected class or object definition
def Motif(){
^